env/code_53c0096e474b0/stderr.txt
main.java:9: error: package system does not exist
		system.out.println("hello");
		      ^
1 error
